<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_124sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">
                    <ImageView
                        android:textStyle="bold"
                        android:fontFamily="cursive"
                        android:textColor="#FB9411"
                        android:textSize="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/vs"
                        android:layout_width="@dimen/_200sdp"
                        android:text="Login Page"
                        android:gravity="center"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/llmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <com.blucor.vsfarm.customecomponent.CustomTextView
                        style="@style/general_lable_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/email_mobile_number"
                        android:textSize="@dimen/_12sdp"
                        app:font_name="NunitoBold.ttf"
                        android:paddingLeft="@dimen/_3sdp" />

                    <com.blucor.vsfarm.customecomponent.CustomEdittext
                        android:id="@+id/EmailEdit"
                        style="@style/general_edittext_style"
                        android:layout_width="match_parent"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_email_mobile_number"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_14sdp"
                        app:font_name="NunitoLight.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="vertical">

                    <com.blucor.vsfarm.customecomponent.CustomTextView
                        style="@style/general_lable_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_3sdp"
                        android:text="@string/password"
                        android:textSize="@dimen/_12sdp"
                        app:font_name="NunitoBold.ttf"
                        android:paddingLeft="@dimen/_3sdp" />

                    <com.blucor.vsfarm.customecomponent.CustomEdittext
                        android:id="@+id/PasswordEdit"
                        style="@style/general_edittext_style"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_14sdp"
                        app:font_name="NunitoLight.ttf" />

                </LinearLayout>

                <com.blucor.vsfarm.customecomponent.CustomTextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_27sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"
                    app:font_name="NunitoSemiBold.ttf" />

                <com.blucor.vsfarm.customecomponent.CustomButton
                    android:id="@+id/tvLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_below="@+id/tvForgotPassword"
                    android:layout_marginLeft="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginRight="@dimen/_35sdp"
                    android:background="@drawable/capsulebutton"
                    android:gravity="center"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black_trans" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.blucor.vsfarm.customecomponent.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="or connect with"
                        android:textColor="@color/black_trans"
                        android:textSize="@dimen/_12sdp"
                        app:font_name="NunitoRegular.ttf" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black_trans" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="horizontal">


                <com.blucor.vsfarm.customecomponent.CustomTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="Facebook"
                    android:visibility="gone"
                    app:font_name="NunitoExtraBold.ttf"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_8sdp" />


                <com.blucor.vsfarm.customecomponent.CustomTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="Google"
                    android:visibility="gone"
                    app:font_name="NunitoExtraBold.ttf"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_8sdp" />


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLoginButton"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center">

                <com.blucor.vsfarm.customecomponent.CustomTextView
                    android:id="@+id/tvDontHaveAccount"
                    style="@style/general_edittext_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:font_name="NunitoRegular.ttf" />

                <com.blucor.vsfarm.customecomponent.CustomTextView
                    android:id="@+id/tvSignupbtn"
                    style="@style/general_edittext_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvDontHaveAccount"
                    android:text=" Sign Up"
                    android:textStyle="bold"
                    android:textColor="#0861AF"
                    android:textSize="@dimen/_14sdp"
                    app:font_name="NunitoBold.ttf" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>